netlify forms fixing

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <form name="MyContact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="hidden" name="form-name" value="MyContact">
+    <input type="text" name="name">
+    <input type="email" name="email">
+    <input type="text" name="company">
+    <input type="text" name="phone">
+    <input type="text" name="message">
+  </form>
 </body>
 </html>
