--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <app-root></app-root>
-  <form name="MyContact" netlify netlify-honeypot="bot-field" hidden>
-    <input type="hidden" name="form-name" value="MyContact">
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="hidden" name="form-name" value="contact">
     <input type="text" name="name">
     <input type="email" name="email">
     <input type="text" name="company">
