--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
-  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+  <form name="contact" method="POST" netlify netlify-honeypot="bot-field" hidden>
     <input type="hidden" name="form-name" value="contact">
     <input type="text" name="name">
     <input type="email" name="email">
