contact form fixing

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularPortfolio</title>
+  <title>MyPortfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,7 +11,7 @@
 <body>
   <app-root></app-root>
   <form name="contact" method="POST" netlify netlify-honeypot="bot-field" hidden>
-    <input type="hidden" name="form-name" value="contact">
+    <input type="hidden" name="form-name" value="contact" />
     <input type="text" name="name">
     <input type="email" name="email">
     <input type="text" name="company">
